deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dokumentstatistikk-deployment
  labels:
    app: dokumentstatistikk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dokumentstatistikk
  template:
    metadata:
      labels:
        app: dokumentstatistikk
    spec:
      containers:
      - name: dokumentstatistikk
        image: gcr.io/norwegian-language-bank/dokumentstatistikk:48762698-6b88-4fa9-ab40-f47b7d7d5be7
        command: [ "/bin/bash" ]
        args: [ "-c", "streamlit run document_statistics.py --server.port 8501 --server.baseUrlPath /dokumentstatistikk --browser.gatherUsageStats=False"]
        ports:
        - containerPort: 8501
        resources:
          limits:
            cpu: 1
            ephemeral-storage: 256Mi
            memory: 2Gi
          requests:
            cpu: 1
            ephemeral-storage: 256Mi
            memory: 2Gi
